--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -289,7 +289,7 @@
                   <p>在工廠學到的並沒有很多，就是賣體力勞力的工作。電腦普查地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
                   <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別的部分，3天內工作共計超過40小時，大概是最累的三天吧。</p>
                   <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁更加熟悉，也讓我對設計網頁更加有興趣。</p>
-                  <p>最後現職軟體工程師，還沒做很久，卻也感受到似乎不是我喜歡的工作類型。</p>
+                  <p>最後現職軟體工程師，工作後跟想像的工作環境及內容差很大，期望能有機會找到理想工作。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -350,7 +350,7 @@
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-              <p>您正在瀏覽，待未來有更多作品...</p>
+              <p>您正在瀏覽的網頁，待未來有更多作品...</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
