--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -287,9 +287,9 @@
                 <div class="modal-body">
                   <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生以及現職軟體工程師。</p>
                   <p>在工廠學到的並沒有很多，就是賣體力勞力的工作。電腦普查地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
-                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別的部分，3天內工作共計超過40小時，大概是最累的三天吧。</p>
+                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別區的廠地佈置，3天內工作共計超過40小時，大概是最累的三天吧。</p>
                   <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁更加熟悉，也讓我對設計網頁更加有興趣。</p>
-                  <p>最後現職軟體工程師，工作後跟想像的工作環境及內容差很大，期望能有機會找到理想工作。</p>
+                  <p>最後期望有機會能找到理想有未來、可以學到很多東西的工作。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
