--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -27,7 +27,7 @@
     <link href="css/new-age.css" rel="stylesheet">
 
   </head>
-
+  <div id="loader" class="loader">Loading...</div>
   <body id="page-top">
 
     <!-- Navigation -->
