--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -242,7 +242,7 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                  <p>到了大學，考上了金門大學資訊工程系，沒想過會來的土地，沒想過會上的科系，因為指考分發來到這裡。本來因為機票會比較便宜而入籍金門，後來又有種種福利將戶籍留於金門。</p>
+                  <p>到了大學，考上了金門大學資訊工程系，沒想過會來的土地，沒想過會上的科系，因為指考分發來到這裡。</p>
                   <p>還好我的數理邏輯不差，沒有遇到太大的困難。社團本來進了吉他社，不過臨時組的團只去了一次就解散，後來也就沒有繼續了。到了大二參加的社團則是合唱團。</p>
                   <p>在這四年內，除學會了許多基本程式語言外，也學了許多軟體應用如PhotoShop等。而專題則是做建立在Adroid上的室內定位，利用藍芽模組定點發出信號強度讓手機計算位置。本專題共 5人合作，而我負責Android介面及部分後台。</p>
                 </div>
@@ -286,10 +286,9 @@
                 </div>
                 <div class="modal-body">
                   <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生以及現職軟體工程師。</p>
-                  <p>在工廠學到的並沒有很多，就是賣體力勞力的工作。電腦普查地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
-                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別區的廠地佈置，3天內工作共計超過40小時，大概是最累的三天吧。</p>
+                  <p>其中電腦普查的部分，地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
+                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別區的廠地佈置，總共3天，工作共計超過40小時，大概是做過的工作中最累的三天吧。</p>
                   <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁更加熟悉，也讓我對設計網頁更加有興趣。</p>
-                  <p>最後期望有機會能找到理想有未來、可以學到很多東西的工作。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
