--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -284,7 +284,7 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                  <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生以及現職軟體工程師。</p>
+                  <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生以及軟體工程師。</p>
                   <p>其中電腦普查的部分，地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
                   <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別區的廠地佈置，總共3天，工作共計超過40小時，大概是做過的工作中最累的三天吧。</p>
                   <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁更加熟悉，也讓我對設計網頁更加有興趣。</p>
