--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -27,6 +27,7 @@
     <link href="css/new-age.css" rel="stylesheet">
 
   </head>
+  <div id="loader" class="loader">Loading...</div>
   <body id="page-top">
 
     <!-- Navigation -->
@@ -57,17 +58,11 @@
         <div class="row h-100 justify-content-around">
 
           <div class="col-lg-3 col-xl-3 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen cycle-slideshow" style="background-color: #fff;">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/pro.jpg" class="img-fluid" alt="">
+                  <div class="screen cycle-slideshow">
                     <img src="img/certificate.jpg" class="img-fluid" alt="">
+                    <img src="img/pro.jpg" class="img-fluid" alt="">
                   </div>
-                </div>
-              </div>
-            </div>
+                
           </div>
 
           <div class="col-lg-6 col-xl-6 my-auto">
@@ -121,7 +116,7 @@
                 </tr>
                 <tr class="animate-box">
                   <td>就業狀態</td>
-                  <td>在職中</td>
+                  <td>待業中</td>
                 </tr>
               </tbody>
             </table>
@@ -220,8 +215,7 @@
                 </div>
                 <div class="modal-body">
                   <p>高中時期讀北市陽明高中，除了各種課業疲勞轟炸外，參加過戲劇社與辯論社。本來最後想轉到流行音樂社，不過被辯論社掛名職務而不得轉社。</p>
-                  <p>在外表儀態上開始有些轉變，最明顯的是擺脫了從前最黑暗、最醜陋的髮型，不過身分證上仍留有那段黑歷史的痕跡。</p>
-                  <p>這 3年之間國中時的同學找我組樂團，我欣然答應並開始自學 Bass，問題是這個團沒有一次練團，最後也不了了之。不過即使如此音樂仍然是我的興趣，有時間也希望能多學一些樂器。</p>
+                  <p>最後一年擔任班上畢代並加入畢聯會，協助畢典及畢冊的規畫。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -241,8 +235,8 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                  <p>到了大學，考上了金門大學資訊工程系，沒想過會來的土地，沒想過會上的科系，因為指考分發來到這裡。</p>
-                  <p>還好我的數理邏輯不差，沒有遇到太大的困難。社團本來進了吉他社，不過臨時組的團只去了一次就解散，後來也就沒有繼續了。到了大二參加的社團則是合唱團。</p>
+                  <p>到了大學，考上了金門大學資訊工程系，沒想過會來的土地，因為指考分發來到這裡。</p>
+                  <p>在課業上，沒有遇到太大的困難。社團本來進了吉他社，後來到了大二開始參加合唱團。</p>
                   <p>在這四年內，除學會了許多基本程式語言外，也學了許多軟體應用如PhotoShop等。而專題則是做建立在Adroid上的室內定位，利用藍芽模組定點發出信號強度讓手機計算位置。本專題共 5人合作，而我負責Android介面及部分後台。</p>
                 </div>
                 <div class="modal-footer">
@@ -285,9 +279,9 @@
                 </div>
                 <div class="modal-body">
                   <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生以及軟體工程師。</p>
-                  <p>其中電腦普查的部分，地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
-                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別區的廠地佈置，總共3天，工作共計超過40小時，大概是做過的工作中最累的三天吧。</p>
-                  <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁更加熟悉，也讓我對設計網頁更加有興趣。</p>
+                  <p>電腦普查地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了，看著各種病人讓我了解到健康非常重要，我不會想最後餘生是躺在病床上被看護推來推去度過。</p>
+                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別的部分，3天內工作共計超過40小時，大概是最累的三天吧。</p>
+                  <p>網頁前端的工作是在大三暑假時，因為這項工作的關係令我對網頁如html, javascript更加熟悉，也讓我對設計網頁更加有興趣。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
