--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    
     <title>WHungC</title>
 
     <!-- Bootstrap core CSS -->
@@ -19,9 +18,6 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/new-age.css" rel="stylesheet">
@@ -56,7 +52,7 @@
 
           <div class="col-lg-3 col-xl-3 my-auto">
                   <div class="screen cycle-slideshow">
-                    <img src="img/certificate.jpg" class="img-fluid" alt="">
+                    <img src="img/certificate.png" class="img-fluid" alt="">
                     <img src="img/pro.jpg" class="img-fluid" alt="">
                   </div>
                 
