--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -354,7 +354,7 @@
             </div>
             <div class="modal-body">
               <p>此影片為當事人的自我介紹，含有多項個人資訊，故僅留頭尾並做畫面模糊以保護個資</p>
-              <video width="100%" controls>
+              <video width="100%" controls preload="none">
                 <source src="video/videowork.mp4" type="video/mp4">
                 您的瀏覽器不支援MPEG4
               </video>
