--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -315,9 +315,9 @@
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-              <img src="img/past_future.png" width="100%">
-              <img src="img/magic.png" width="100%">
-              <img src="img/why.png" width="100%">
+              <img src="img/past_future.jpg" width="100%">
+              <img src="img/magic.jpg" width="100%">
+              <img src="img/why.jpg" width="100%">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -354,7 +354,7 @@
             </div>
             <div class="modal-body">
               <p>此影片為當事人的自我介紹，含有多項個人資訊，故僅留頭尾並做畫面模糊以保護個資</p>
-              <video width="100%" controls preload="none" controlsList="nodownload">
+              <video width="100%" controls preload="none">
                 <source src="video/videowork.mp4" type="video/mp4">
                 您的瀏覽器不支援MPEG4
               </video>
