--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -239,6 +239,8 @@
         <h1 class="timeline-title text-center">Timeline</h1>
         <br />
         <ul class="timeline">
+          
+          <li><div class="tldate">Now</div></li>
     
           <li>
             <div class="tl-circ"></div>
