--- a/WHungC/WHungC.html
+++ b/WHungC/WHungC.html
@@ -174,9 +174,11 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                  <p>到了大學，考上了金門大學資訊工程系。</p>
+                  <p>大學考上了金門大學資訊工程系。</p>
                   <p>在課業上，沒有遇到太大的困難。社團參加合唱團。</p>
-                  <p>在這四年內，除學會了許多基本程式語言外，也學了許多軟體應用如PhotoShop等。而專題則是做建立在Adroid上的室內定位，利用藍芽模組定點發出信號強度讓手機計算位置。本專題共 5人合作，而我負責Android介面及部分後台。</p>
+                  <p>在這四年內，除學會了許多基本程式語言外，也學了許多軟體應用如PhotoShop等。
+                    而專題則是做建立在Adroid上的室內定位，利用手機偵測藍芽模組所發出的信號強度讓手機計算位置。
+                    本專題共 5人合作，而我負責處理Android手機所接收到的訊號數值，並顯示於介面。</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -219,8 +221,8 @@
                 <div class="modal-body">
                   <p>做過的工作類型多樣，如工廠包裝工讀生、電腦普查工讀生、金門酒廠運動會場地佈置工讀生、網頁前端工讀生。</p>
                   <p>電腦普查地點是三軍總醫院，整間醫院除了手術室幾乎都逛過了。</p>
-                  <p>金酒運動會的場佈我被分配到漆彈場，偶而臨時幫忙別的部分，3天內工作共計超過40小時，大概是最累的三天吧。</p>
-                  <p>網頁前端的工作是在大三暑假時，以Bootstrap撰寫網頁，因為這項工作的關係令我對網頁如html, javascript更加熟悉，也讓我對設計網頁更加有興趣。</p>
+                  <p>網頁前端的工作是在大三暑假時，以Bootstrap來完成網頁的介面撰寫，並以此介面置於android、IOS環境下執行。
+                  因此在資訊技術上比較擅長在手機環境下整合html、javascript、Bootstrap</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
